Atualização da navbar e solução dos problemas da mesma

--- a/public/eventos.html
+++ b/public/eventos.html
@@ -30,7 +30,7 @@
 
     <header>
         <nav class="navbar">
-            <ul>
+            <ul class="navbar-list">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="index.html#sobre">Sobre</a></li>
                 <li><a href="index.html#experiencia-titulo">Experiência</a></li>
@@ -43,10 +43,13 @@
 
     <section id="eventos-hero" class="eventos-hero">
         <video autoplay muted loop playsinline>
-            <source src="../static/videos/eventos.mp4" type="video/mp4">
+            <source src="../static/videos/background.mp4" type="video/mp4">
             O seu navegador não suporta vídeos HTML5.
         </video>
         <div class="video-overlay"></div>
+        <div class="section-hero-text">
+            <h2 class="section-hero-title">Eventos</h2>
+        </div>
     </section>
 
     <section id="galeria-eventos" class="galeria-eventos-section">
