--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
     <header>
         <nav class="navbar">
-            <ul>
+            <ul class="navbar-list">
                 <li><a href="#inicio">Início</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#experiencia-titulo">Experiência</a></li>
@@ -165,7 +165,7 @@
             <a class="artigo-box" href="https://www.linkedin.com/pulse/intelig%C3%AAncia-artificial-mundo-das-tecnologias-tom%C3%A1s-abreu-ffsgf/?trackingId=5ju2pdk9T4Ky%2F5CA0%2FvSNg%3D%3D" target="_blank">
                 <div class="artigo-image" style="background-image: url('../static/images/artigo2.jpg');"></div>
                 <div class="artigo-text-content">
-                    <h3>Inteligência Artificial no Mundo das Tecnologias</h3>
+                    <h3>Inteligência Artificial em IT</h3>
                 </div>
             </a>
             <a class="artigo-box" href="#artigos-titulo">
@@ -244,8 +244,8 @@
                     </a>
                 </div>
                 <div class="contactos-cv-block">
-                    <p class="contactos-label">Curriculum Vitae</p>
-                    <a href="../static/pdf/Curriculum.pdf" target="_blank" class="btn-cv">Download</a>
+                    <p class="contactos-label">Curriculum</p>
+                    <a href="../static/pdf/Curriculum.pdf" target="_blank" class="btn-cv">Download CV</a>
                 </div>
             </div>
 
